Sat Apr 30 11:49:01 EEST 2005 Pekka Riikonen <priikone@silcnet.org>

	* Added better debug messages.

	* Added log file creation, autodist.log and makedist.log.

	* Fixed license-header to change license only during packaging,
	  not also during preparation.

	* Fixed .ad processing when the file was not processed, to
	  copy the original to new name.

Fri Apr 29 16:48:16 EEST 2005 Pekka Riikonen <priikone@silcnet.org>

	* Fixed configure.ac creation when no fragments in use.

Thu Apr 28 11:44:59 EEST 2005 Pekka Riikonen <priikone@silcnet.org>

	* The '.in' suffix with source file suffixes expects source code 
	  format for the distdefs.

Sun Apr 24 21:11:49 EEST 2005 Pekka Riikonen <priikone@silcnet.org>

	* Fixed undefining to actually work.

	* The top distribution now takes precedence on defined
	  distdefs over inherited distributions, and can override
	  defined and undefined distdefs (previously it could only
	  undefine defined but not define specificly undefined :)).

	* Prettier distdef output with -s.

Sat Apr 23 12:49:09 EEST 2005 Pekka Riikonen <priikone@silcnet.org>

	* Autodist 1.2.1.

	* Fixed 'noprocess' sed script.

Fri Apr 22 20:23:06 EEST 2005  Pekka Riikonen <priikone@silcnet.org>

	* Autodist 1.2.

	* Various 'cat' optimizations.

	* More test cases in tests/.

	* No Autodist header for "other" '.ad' files as we don't know 
	  what the file contains.

	* No non-source distdef format processing for source files
	  anymore.

Tue Apr 19 17:12:09 EEST 2005  Pekka Riikonen <priikone@silcnet.org>

	* Remove extra ' ' and '\t' when joining backslashed lines.

	* Fixed argument delivery to hook scripts.

Mon Apr 18 21:05:42 EEST 2005  Pekka Riikonen <priikone@silcnet.org>

	* Process '*.ad' files before calling autoconf and automake.

	* Various shell compatibility kludges added.

Mon Apr 18 20:06:24 EEST 2005  Pekka Riikonen <priikone@silcnet.org>

	* Autodist 1.1.

	* All 'local' variables must be at the start of function for
	  compatibility.
