@@ -10,6 +10,9 @@ Sat Apr 30 11:49:01 EEST 2005 Pekka Riikonen <priikone@silcnet.org>
 	* Fixed .ad processing when the file was not processed, to
 	  copy the original to new name.
 
+	* Fixed 'include' when copying directories to root of the
+	  distdir, and the destination directory already exist.
+
 Fri Apr 29 16:48:16 EEST 2005 Pekka Riikonen <priikone@silcnet.org>
 
 	* Fixed configure.ac creation when no fragments in use.
